--- a/index.css
+++ b/index.css
@@ -24,7 +24,7 @@ body {
 h1 {
   margin: 0 0 0 0;
   padding: 16px 0 16px 0;
-  font-family: Impact, Charcoal, sans-serif;
+  font-family: Charcoal, sans-serif;
   font-size: 46px;
   font-weight: bold;
   letter-spacing: -2px;
@@ -84,7 +84,7 @@ ul {
 }
 ul span {
   font-weight: bold;
-  font-family: Impact, Serif;
+  font-family: Serif;
   color: #000000;
 }
 #objective {
@@ -95,7 +95,7 @@ ul span {
   font-family: Georgia, Serif;
 }
 dt {
-  font-family: Impact, Charcoal, sans-serif;
+  font-family: Charcoal, sans-serif;
   display: flex;
   flex-direction: row;
   font-weight: bold;
